- Add node_modules to .gitignore.  - Set CSS property 'scroll-margin-top' globally using JS to get the height of the navigation bar and then set a CSS variable.  - Clean up app.css.  - Change down arrow on GameList from incosistent unicode character to svelte-icons icon.  - Fix bug by removing row query parameter when switching page.  - When switching page, use hash link, not JavaScript to scroll page to top.  - Clean up NavButtons and ensure that sliding selection indicator stays at the bottom of the navigation bar (previously it could be at different vertical heights for different pages on mobile).

--- a/sgf-viewer/src/css/app.css
+++ b/sgf-viewer/src/css/app.css
@@ -11,15 +11,22 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  -webkit-overflow-scrolling: touch;
 
   scroll-behavior: smooth;
+
+  -webkit-overflow-scrolling: touch;
 }
 
-.wgo-button::before,
+* {
+  /* When a hash link scrolls to an element,
+  this ensures the navigation bar doesn't cover it. */
+  scroll-margin-top: calc(var(--scroll-margin) + 1vh);
+}
+
+/* .wgo-button::before,
 .wgo-player-mn-value {
   color: rgb(81, 81, 81);
-}
+} */
 
 a {
   font-weight: bold;
@@ -46,24 +53,4 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-.card {
-  padding: 2em;
-}
-
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
 }
